sumo/tests/dfrouter/errors/network/junction/testsuite.dfrouter
root__junction#id__empty1
root__junction#id__empty2
root__junction#id__empty3
root__junction#id__ungiven1
root__junction#id__ungiven2
root__junction#id__ungiven3


